Creation des projets Palindrome et vowel

--- a/palyndromeChecker/index.html
+++ b/palyndromeChecker/index.html
@@ -15,14 +15,12 @@
 
 <body>
   <div class="container">
-    <h1 class="heading-primary">Random Hex Color</h1>
-    <p class="counter-txt hex-value">0</p>
-    <span class="line"></span>
-    <div class="container-btn">
-      <button class="btn btn-res">
-        <i class="icon fa-solid fa-spinner"></i>
-        <p>Random</p>
-      </button>
+    <div class="box">
+      <form class="form" action="">
+        <input class="form__txt" name="palindrome" type="text" placeholder="Your word" />
+        <button class="form__btn" id="palindrome">Check</button>
+      </form>
+      <p class="result"><span class="uppercase"></span></p>
     </div>
   </div>
 </body>
