--- a/vowelCounter/index.html
+++ b/vowelCounter/index.html
@@ -15,15 +15,7 @@
 
 <body>
   <div class="container">
-    <h1 class="heading-primary">Random Hex Color</h1>
-    <p class="counter-txt hex-value">0</p>
-    <span class="line"></span>
-    <div class="container-btn">
-      <button class="btn btn-res">
-        <i class="icon fa-solid fa-spinner"></i>
-        <p>Random</p>
-      </button>
-    </div>
+    <div class="box">test</div>
   </div>
 </body>
 
