--- a/characterCounter/index.html
+++ b/characterCounter/index.html
@@ -15,12 +15,11 @@
 
 <body>
   <div class="container">
-    <div class="box">
-      <form class="form" action="">
-        <input class="form__txt" name="palindrome" type="text" placeholder="Enter your word..." />
-        <button class="form__btn" id="palindrome">Check</button>
-      </form>
-      <p class="result"><span class="uppercase"></span></p>
+    <div class="chara-counter">
+      <h1 class="heading-primary">Input Character Count</h1>
+      <p class="number">0</p>
+      <hr>
+      <input type="text" class="input-txt" placeholder="Type Here">
     </div>
   </div>
 </body>
