--- a/copyToClipboard/index.html
+++ b/copyToClipboard/index.html
@@ -15,12 +15,14 @@
 
 <body>
   <div class="container">
-    <div class="box">
-      <form class="form" action="">
-        <input class="form__txt" name="palindrome" type="text" placeholder="Enter your word..." />
-        <button class="form__btn" id="palindrome">Check</button>
+    <div class="copyToClip">
+      <form class="coupon" action="">
+        <label for="coupon" class="coupon__heading">Get 25% Discount with this coupon</label>
+        <div class="coupon__input">
+          <input id="coupon" type="text" class="coupon__input__txt" placeholder="Enter your code..." />
+          <button class="coupon__input__btn">Copy</button>
+        </div>
       </form>
-      <p class="result"><span class="uppercase"></span></p>
     </div>
   </div>
 </body>
